bugs fixed (sort of)

--- a/real-chess.html
+++ b/real-chess.html
@@ -28,7 +28,7 @@
             <div class="square" id="g7"><div class="piece black pawn"></div></div>
             <div class="square" id="h7"><div class="piece black pawn"></div></div>
         </div>
-        <div class="row"></div>
+        <div class="row">
             <div class="square" id="a6"></div>
             <div class="square" id="b6"></div>
             <div class="square" id="c6"></div>
@@ -37,6 +37,7 @@
             <div class="square" id="f6"></div>
             <div class="square" id="g6"></div>
             <div class="square" id="h6"></div>
+        </div>
         <div class="row">
             <div class="square" id="a5"></div>
             <div class="square" id="b5"></div>
