--- a/fake-chess.html
+++ b/fake-chess.html
@@ -10,7 +10,7 @@
     <h1>Welcome to my awesome chess website!</h1>
     <div class="chess-board" id="notClickableSection">
         <div class="file">
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_rdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg"></div>
             <div><img src="https://commons.wikimedia.org/wiki/File:Chess_ndt45.svg"></div>
             <div><img src="https://commons.wikimedia.org/wiki/File:Chess_bdt45.svg"></div>
             <div><img src="https://commons.wikimedia.org/wiki/File:Chess_qdt45.svg"></div>
