--- a/fake-chess.html
+++ b/fake-chess.html
@@ -11,100 +11,103 @@
     <div class="chess-board" id="notClickableSection">
         <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_ndt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_bdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_qdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_kdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_bdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_ndt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_rdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rlt45.svg"></div>
         </div>
         <div class="file">
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_ndt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_nlt45.svg"></div>
         </div>
         <div class="file">
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_bdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_blt45.svg"></div>
         </div>
         <div class="file">
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_qdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_qlt45.svg"></div>
         </div>
         <div class="file">
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_kdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_kdt45.svg"></div>
         </div>
         <div class="file">
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_bdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_blt45.svg"></div>
         </div>
         <div class="file">
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_ndt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_nlt45.svg"></div>
         </div>
         <div class="file">
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_rlt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_nlt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_blt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_qlt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_klt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_blt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_nlt45.svg"></div>
-            <div><img src="https://commons.wikimedia.org/wiki/File:Chess_rlt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rlt45.svg"></div>
         </div>
     </div>
     <h2>Leaderbords</h2>
     <table>
         <tr>
             <td>#1</td>
-            <td>popapipiskakakashka2006</td>
+            <td><img src="https://images.chesscomfiles.com/uploads/v1/user/313859735.e2665248.160x160o.7d3335e3c656@2x.jpg"></td>
+            <td>popapipiskakakashka2006 🏳️</td>
             <td>352</td>
         </tr>
         <tr>
             <td>#2</td>
-            <td>Martin</td>
+            <td><img src="https://images.chesscomfiles.com/uploads/v1/user/66746160.794c1e49.200x200o.dbe7eab8b66c.png"></td>
+            <td>Martin 🇧🇬</td>
             <td>250</td>
         </tr>
         <tr>
             <td>#3</td>
-            <td>Egor Shilko</td>
+            <td><img src=""></td>
+            <td>Egor Shilko 🏳️</td>
             <td>100</td>
         </tr>
     </table>
