--- a/fake-chess.html
+++ b/fake-chess.html
@@ -106,7 +106,7 @@
         </tr>
         <tr>
             <td>#3</td>
-            <td><img src=""></td>
+            <td><img src="https://www.chess.com/bundles/web/images/user-image.007dad08.svg"></td>
             <td>Egor Shilko 🏳️</td>
             <td>100</td>
         </tr>
