--- a/fake-chess.html
+++ b/fake-chess.html
@@ -10,24 +10,54 @@
     <h1>Welcome to my awesome chess website!</h1>
     <div class="chess-board" id="notClickableSection">
         <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_rdt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rlt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
         </div>
         <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_ndt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_nlt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
+        </div>
+        <div class="file">
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_bdt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
+        </div>
+        <div class="file">
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Chess_qdt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Chess_qlt60.png"></div>
+        </div>
+        <div class="file">
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Chess_kdt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Chess_klt60.png"></div>
         </div>
         <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_bdt45.svg"></div>
@@ -40,36 +70,6 @@
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_blt45.svg"></div>
         </div>
         <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_qdt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_qlt45.svg"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_kdt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_kdt45.svg"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_bdt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_blt45.svg"></div>
-        </div>
-        <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_ndt45.svg"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
             <div></div>
@@ -87,7 +87,7 @@
             <div></div>
             <div></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rlt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
         </div>
     </div>
     <h2>Leaderbords</h2>
