--- a/fake-chess.html
+++ b/fake-chess.html
@@ -21,47 +21,47 @@
         </div>
         <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
         </div>
         <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_bdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
         </div>
         <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Chess_qdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Chess_qlt60.png"></div>
         </div>
         <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Chess_kdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_pdt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Chess_klt60.png"></div>
         </div>
         <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_bdt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_bdt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
@@ -70,8 +70,8 @@
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_blt45.svg"></div>
         </div>
         <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_ndt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt45.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt45.png"></div>
             <div></div>
             <div></div>
             <div></div>
@@ -95,25 +95,25 @@
         <tr>
             <td>#1</td>
             <td><img src="https://images.chesscomfiles.com/uploads/v1/user/313859735.e2665248.160x160o.7d3335e3c656@2x.jpg"></td>
-            <td>popapipiskakakashka2006 🏳️</td>
+            <td>popapipiskakakashka2006</td>
             <td>352</td>
         </tr>
         <tr>
             <td>#2</td>
             <td><img src="https://images.chesscomfiles.com/uploads/v1/user/66746160.794c1e49.200x200o.dbe7eab8b66c.png"></td>
-            <td>Martin 🇧🇬</td>
+            <td>Martin</td>
             <td>250</td>
         </tr>
         <tr>
             <td>#3</td>
             <td><img src="https://www.chess.com/bundles/web/images/user-image.007dad08.svg"></td>
-            <td>Egor Shilko 🏳️</td>
+            <td>Egor Shilko</td>
             <td>100</td>
         </tr>
     </table>
     <script>
         document.getElementById("notClickableSection").addEventListener("click", function() {
-            alert("Hey, nerd! You are not allowed to play here. Go to your fucking chess.cum. You are not welcome anymore");
+            alert("Hey, nerd! You are not allowed to play here.");
         })
     </script>
 </body>
