--- a/fake-chess.html
+++ b/fake-chess.html
@@ -56,7 +56,7 @@
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_pdt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Chess_klt60.png"></div>
         </div>
         <div class="file">
@@ -66,8 +66,8 @@
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_blt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
         </div>
         <div class="file">
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt45.png"></div>
@@ -76,21 +76,21 @@
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_nlt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt45.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
         </div>
         <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_pdt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_rdt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_plt45.svg"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt45.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
         </div>
     </div>
-    <h2>Leaderbords</h2>
+    <h2>Leaderboards</h2>
     <table>
         <tr>
             <td>#1</td>
