--- a/fake-chess.html
+++ b/fake-chess.html
@@ -70,13 +70,13 @@
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
         </div>
         <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt45.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt45.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
             <div></div>
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt45.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
         </div>
         <div class="file">
@@ -86,7 +86,7 @@
             <div></div>
             <div></div>
             <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt45.png"></div>
+            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
             <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
         </div>
     </div>
@@ -106,7 +106,7 @@
         </tr>
         <tr>
             <td>#3</td>
-            <td><img src="https://www.chess.com/bundles/web/images/user-image.007dad08.svg"></td>
+            <td><img src="https://chess.fandom.com/wiki/Pawn?file=LightPawn.png"></td>
             <td>Egor Shilko</td>
             <td>100</td>
         </tr>
