--- a/fake-chess.html
+++ b/fake-chess.html
@@ -93,19 +93,19 @@
     <h2>Leaderboards</h2>
     <table>
         <tr>
-            <td>#1</td>
+            <td id="gold">#1</td>
             <td><img src="https://images.chesscomfiles.com/uploads/v1/user/313859735.e2665248.160x160o.7d3335e3c656@2x.jpg"></td>
             <td>popapipiskakakashka2006</td>
             <td>352</td>
         </tr>
         <tr>
-            <td>#2</td>
+            <td id="silver">#2</td>
             <td><img src="https://images.chesscomfiles.com/uploads/v1/user/66746160.794c1e49.200x200o.dbe7eab8b66c.png"></td>
             <td>Martin</td>
             <td>250</td>
         </tr>
         <tr>
-            <td>#3</td>
+            <td id="bronze">#3</td>
             <td><img src="https://chess.fandom.com/wiki/Pawn?file=LightPawn.png"></td>
             <td>Egor Shilko</td>
             <td>100</td>
