--- a/fake-chess.html
+++ b/fake-chess.html
@@ -8,109 +8,113 @@
 </head>
 <body>
     <h1>Welcome to my awesome chess website!</h1>
-    <div class="chess-board" id="notClickableSection">
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_rdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_bdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Chess_qdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Chess_qlt60.png"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Chess_kdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Chess_klt60.png"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_bdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
-        </div>
-        <div class="file">
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_rdt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
-            <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
+    <div class="chess-container">
+        <div class="chess-board" id="notClickableSection">
+            <div class="file">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_rdt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
+            </div>
+            <div class="file">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
+            </div>
+            <div class="file">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_bdt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
+            </div>
+            <div class="file">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Chess_qdt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Chess_qlt60.png"></div>
+            </div>
+            <div class="file">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Chess_kdt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Chess_klt60.png"></div>
+            </div>
+            <div class="file">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_bdt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Chess_blt60.png"></div>
+            </div>
+            <div class="file">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Chess_ndt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
+            </div>
+            <div class="fuck">
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_rdt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
+                <div><img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_rlt60.png"></div>
+            </div>
         </div>
     </div>
     <h2>Leaderboards</h2>
-    <table>
-        <tr>
-            <td id="gold">#1</td>
-            <td><img src="https://images.chesscomfiles.com/uploads/v1/user/313859735.e2665248.160x160o.7d3335e3c656@2x.jpg"></td>
-            <td>popapipiskakakashka2006</td>
-            <td>352</td>
-        </tr>
-        <tr>
-            <td id="silver">#2</td>
-            <td><img src="https://images.chesscomfiles.com/uploads/v1/user/66746160.794c1e49.200x200o.dbe7eab8b66c.png"></td>
-            <td>Martin</td>
-            <td>250</td>
-        </tr>
-        <tr>
-            <td id="bronze">#3</td>
-            <td><img src="https://chess.fandom.com/wiki/Pawn?file=LightPawn.png"></td>
-            <td>Egor Shilko</td>
-            <td>100</td>
-        </tr>
-    </table>
+    <div class="table-container">
+        <table>
+            <tr>
+                <td id="gold">#1</td>
+                <td><img src="https://images.chesscomfiles.com/uploads/v1/user/313859735.e2665248.160x160o.7d3335e3c656@2x.jpg"></td>
+                <td>popapipiskakakashka2006</td>
+                <td>352</td>
+            </tr>
+            <tr>
+                <td id="silver">#2</td>
+                <td><img src="https://images.chesscomfiles.com/uploads/v1/user/66746160.794c1e49.200x200o.dbe7eab8b66c.png"></td>
+                <td>Martin</td>
+                <td>250</td>
+            </tr>
+            <tr>
+                <td id="bronze">#3</td>
+                <td><img src="https://chess.fandom.com/wiki/Pawn?file=LightPawn.png"></td>
+                <td>Egor Shilko</td>
+                <td>100</td>
+            </tr>
+        </table>
+    </div>
     <script>
         document.getElementById("notClickableSection").addEventListener("click", function() {
             alert("Hey, nerd! You are not allowed to play here.");
