--- a/real-chess.html
+++ b/real-chess.html
@@ -7,86 +7,88 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="board" id="board">
-        <div class="row">
-            <div class="square" id="a8"><div class="piece black-rook"></div></div>
-            <div class="square" id="b8"><div class="piece black-knight"></div></div>
-            <div class="square" id="c8"><div class="piece black-bishop"></div></div>
-            <div class="square" id="d8"><div class="piece black-queen"></div></div>
-            <div class="square" id="e8"><div class="piece black-king"></div></div>
-            <div class="square" id="f8"><div class="piece black-bishop"></div></div>
-            <div class="square" id="g8"><div class="piece black-knight"></div></div>
-            <div class="square" id="h8"><div class="piece black-rook"></div></div>
-        </div>
-        <div class="row">
-            <div class="square" id="a7"><div class="piece black-pawn"></div></div>
-            <div class="square" id="b7"><div class="piece black-pawn"></div></div>
-            <div class="square" id="c7"><div class="piece black-pawn"></div></div>
-            <div class="square" id="d7"><div class="piece black-pawn"></div></div>
-            <div class="square" id="e7"><div class="piece black-pawn"></div></div>
-            <div class="square" id="f7"><div class="piece black-pawn"></div></div>
-            <div class="square" id="g7"><div class="piece black-pawn"></div></div>
-            <div class="square" id="h7"><div class="piece black-pawn"></div></div>
-        </div>
-        <div class="row">
-            <div class="square" id="a6"></div>
-            <div class="square" id="b6"></div>
-            <div class="square" id="c6"></div>
-            <div class="square" id="d6"></div>
-            <div class="square" id="e6"></div>
-            <div class="square" id="f6"></div>
-            <div class="square" id="g6"></div>
-            <div class="square" id="h6"></div>
-        </div>
-        <div class="row">
-            <div class="square" id="a5"></div>
-            <div class="square" id="b5"></div>
-            <div class="square" id="c5"></div>
-            <div class="square" id="d5"></div>
-            <div class="square" id="e5"></div>
-            <div class="square" id="f5"></div>
-            <div class="square" id="g5"></div>
-            <div class="square" id="h5"></div>
-        </div>
-        <div class="row">
-            <div class="square" id="a4"></div>
-            <div class="square" id="b4"></div>
-            <div class="square" id="c4"></div>
-            <div class="square" id="d4"></div>
-            <div class="square" id="e4"></div>
-            <div class="square" id="f4"></div>
-            <div class="square" id="g4"></div>
-            <div class="square" id="h4"></div>
-        </div>
-        <div class="row">
-            <div class="square" id="a3"></div>
-            <div class="square" id="b3"></div>
-            <div class="square" id="c3"></div>
-            <div class="square" id="d3"></div>
-            <div class="square" id="e3"></div>
-            <div class="square" id="f3"></div>
-            <div class="square" id="g3"></div>
-            <div class="square" id="h3"></div>
-        </div>
-        <div class="row">
-            <div class="square" id="a2"><div class="piece white-pawn"></div></div>
-            <div class="square" id="b2"><div class="piece white-pawn"></div></div>
-            <div class="square" id="c2"><div class="piece white-pawn"></div></div>
-            <div class="square" id="d2"><div class="piece white-pawn"></div></div>
-            <div class="square" id="e2"><div class="piece white-pawn"></div></div>
-            <div class="square" id="f2"><div class="piece white-pawn"></div></div>
-            <div class="square" id="g2"><div class="piece white-pawn"></div></div>
-            <div class="square" id="h2"><div class="piece white-pawn"></div></div>
-        </div>
-        <div class="row">
-            <div class="square" id="a1"><div class="piece white-rook"></div></div>
-            <div class="square" id="b1"><div class="piece white-knight"></div></div>
-            <div class="square" id="c1"><div class="piece white-bishop"></div></div>
-            <div class="square" id="d1"><div class="piece white-queen"></div></div>
-            <div class="square" id="e1"><div class="piece white-king"></div></div>
-            <div class="square" id="f1"><div class="piece white-bishop"></div></div>
-            <div class="square" id="g1"><div class="piece white-knight"></div></div>
-            <div class="square" id="h1"><div class="piece white-rook"></div></div>
+    <div class="chess-container">
+        <div class="board" id="board">
+            <div class="row">
+                <div class="square" id="a8"><div class="piece black-rook"></div></div>
+                <div class="square" id="b8"><div class="piece black-knight"></div></div>
+                <div class="square" id="c8"><div class="piece black-bishop"></div></div>
+                <div class="square" id="d8"><div class="piece black-queen"></div></div>
+                <div class="square" id="e8"><div class="piece black-king"></div></div>
+                <div class="square" id="f8"><div class="piece black-bishop"></div></div>
+                <div class="square" id="g8"><div class="piece black-knight"></div></div>
+                <div class="square" id="h8"><div class="piece black-rook"></div></div>
+            </div>
+            <div class="row">
+                <div class="square" id="a7"><div class="piece black-pawn"></div></div>
+                <div class="square" id="b7"><div class="piece black-pawn"></div></div>
+                <div class="square" id="c7"><div class="piece black-pawn"></div></div>
+                <div class="square" id="d7"><div class="piece black-pawn"></div></div>
+                <div class="square" id="e7"><div class="piece black-pawn"></div></div>
+                <div class="square" id="f7"><div class="piece black-pawn"></div></div>
+                <div class="square" id="g7"><div class="piece black-pawn"></div></div>
+                <div class="square" id="h7"><div class="piece black-pawn"></div></div>
+            </div>
+            <div class="row">
+                <div class="square" id="a6"></div>
+                <div class="square" id="b6"></div>
+                <div class="square" id="c6"></div>
+                <div class="square" id="d6"></div>
+                <div class="square" id="e6"></div>
+                <div class="square" id="f6"></div>
+                <div class="square" id="g6"></div>
+                <div class="square" id="h6"></div>
+            </div>
+            <div class="row">
+                <div class="square" id="a5"></div>
+                <div class="square" id="b5"></div>
+                <div class="square" id="c5"></div>
+                <div class="square" id="d5"></div>
+                <div class="square" id="e5"></div>
+                <div class="square" id="f5"></div>
+                <div class="square" id="g5"></div>
+                <div class="square" id="h5"></div>
+            </div>
+            <div class="row">
+                <div class="square" id="a4"></div>
+                <div class="square" id="b4"></div>
+                <div class="square" id="c4"></div>
+                <div class="square" id="d4"></div>
+                <div class="square" id="e4"></div>
+                <div class="square" id="f4"></div>
+                <div class="square" id="g4"></div>
+                <div class="square" id="h4"></div>
+            </div>
+            <div class="row">
+                <div class="square" id="a3"></div>
+                <div class="square" id="b3"></div>
+                <div class="square" id="c3"></div>
+                <div class="square" id="d3"></div>
+                <div class="square" id="e3"></div>
+                <div class="square" id="f3"></div>
+                <div class="square" id="g3"></div>
+                <div class="square" id="h3"></div>
+            </div>
+            <div class="row">
+                <div class="square" id="a2"><div class="piece white-pawn"></div></div>
+                <div class="square" id="b2"><div class="piece white-pawn"></div></div>
+                <div class="square" id="c2"><div class="piece white-pawn"></div></div>
+                <div class="square" id="d2"><div class="piece white-pawn"></div></div>
+                <div class="square" id="e2"><div class="piece white-pawn"></div></div>
+                <div class="square" id="f2"><div class="piece white-pawn"></div></div>
+                <div class="square" id="g2"><div class="piece white-pawn"></div></div>
+                <div class="square" id="h2"><div class="piece white-pawn"></div></div>
+            </div>
+            <div class="row">
+                <div class="square" id="a1"><div class="piece white-rook"></div></div>
+                <div class="square" id="b1"><div class="piece white-knight"></div></div>
+                <div class="square" id="c1"><div class="piece white-bishop"></div></div>
+                <div class="square" id="d1"><div class="piece white-queen"></div></div>
+                <div class="square" id="e1"><div class="piece white-king"></div></div>
+                <div class="square" id="f1"><div class="piece white-bishop"></div></div>
+                <div class="square" id="g1"><div class="piece white-knight"></div></div>
+                <div class="square" id="h1"><div class="piece white-rook"></div></div>
+            </div>
         </div>
     </div>
 
