--- a/fake-chess/fake-chess.html
+++ b/fake-chess/fake-chess.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to my awesome chess website!</h1>
+    <p>First time here? <a href="www.google.com/search?q=en%20passant">Google en passant</a>.</p>
     <div class="chess-container">
         <div class="chess-board" id="notClickableSection">
             <div class="file">
