--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess Game</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/chessboard-1.0.0.min.css">
 </head>
 <body>
     <div class="chess-container">
