--- a/fake-chess/fake-chess.html
+++ b/fake-chess/fake-chess.html
@@ -81,7 +81,7 @@
                 <div><img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Chess_plt60.png"></div>
                 <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt60.png"></div>
             </div>
-            <div class="fuck">
+            <div class="file">
                 <div><img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_rdt60.png"></div>
                 <div><img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Chess_pdt60.png"></div>
                 <div></div>
